src_old/objects/UIConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This will store record type settings for OH screens.</description>
    <fields>
        <fullName>DefaultProjectRecordType__c</fullName>
        <label>Default Project Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLockedRecordType__c</fullName>
        <label>Project Locked RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRecordtypePattern__c</fullName>
        <label>Project Recordtype Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectServiceLockedRecordType__c</fullName>
        <label>Project Service Locked RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectServiceRecordtypePattern__c</fullName>
        <label>Project Service Recordtype Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UI Configuration</label>
</CustomObject>